--- a/src/components/Banner/style.scss
+++ b/src/components/Banner/style.scss
@@ -1,4 +1,4 @@
-@import "../../styles/common/variables";
+@import '../../styles/common/variables';
 
 .Banner {
   display: flex;
@@ -12,8 +12,8 @@
   &__head {
     display: grid;
     flex-direction: column;
-    grid-template-columns: 36px 650px ;
     margin-top: -25px;
+    grid-template-columns: 36px 650px;
   }
 
   &__title {
@@ -37,7 +37,6 @@
     letter-spacing: 0;
     color: #5c6475;
     text-align: left;
-
   }
 
   &__icon {
@@ -46,20 +45,23 @@
     height: 16px;
     margin: 8px;
   }
+
   &__close {
-    text-align: right;
+    z-index: 5;
+    align-items: end;
     width: -webkit-fill-available;
     height: 16px;
-    align-items: end;
-    z-index: 5;
+    text-align: right;
   }
   @media (max-width: 1020px) {
     width: 600px;
     padding: 24px;
     gap: 16px;
+
     &__head {
       display: flex;
     }
+
     &__icon {
       display: block;
     }
@@ -68,9 +70,11 @@
     width: 335px;
     padding: 24px;
     gap: 16px;
+
     &__head {
       display: flex;
     }
+
     &__icon {
       display: block;
     }
