--- a/src/components/roadmap-page/Quarters/style.scss
+++ b/src/components/roadmap-page/Quarters/style.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/_main";
+@import '../../../styles/_main';
 
 .Quarters {
   background-color: $c_catskill_white;
@@ -18,7 +18,7 @@
     display: initial;
     color: inherit;
     text-align: right;
-    transition: transform 0.3s;
+    transition: transform .3s;
 
     &--active {
       transform: rotate(180deg);
@@ -53,7 +53,7 @@
       justify-content: flex-end;
       color: inherit;
       text-align: right;
-      transition: transform 0.3s;
+      transition: transform .3s;
     }
 
     &__dropdown {
@@ -76,12 +76,13 @@
       align-items: center;
       height: 60px;
       padding: 10px 16px 10px 16px;
+      cursor: pointer;
       background-color: $c_catskill_white;
+      background-color: white;
       grid-gap: 10px;
       grid-template-columns: repeat(2, 1fr);
       justify-items: center;
-      background-color: white;
-      cursor: pointer;
+
       &__label {
         display: inline-table;
         width: 190px;
@@ -130,7 +131,7 @@
       font-family: $font-secondary;
       font-size: 14px;
       line-height: 20px;
-      letter-spacing: -0.4000000059604645px;
+      letter-spacing: -.4000000059604645px;
       color: #a7aeb7;
       text-align: center;
     }
@@ -138,14 +139,14 @@
     &__button {
       width: 232px;
       height: 60px;
-
+      margin-left: 6px;
       padding: 0 0;
       color: $c_blue-ribbon;
       background: $c_catskill_white;
       border: 2px solid $c_blue-ribbon;
       border-radius: 2px;
       gap: 8px;
-      margin-left: 6px;
+
       &:hover {
         background-color: $c_white;
         border-width: 4px;
@@ -172,8 +173,9 @@
     flex-direction: row;
     justify-content: center;
     margin-top: 96px;
-    gap: 16px;
     margin-bottom: 96px;
+    gap: 16px;
+
     &__item {
       border-left: solid 2px #a7aeb7;
     }
@@ -182,16 +184,18 @@
   &__top__banner {
     margin-top: 32px;
     border-left: solid 2px #ff3861;
+
     &__button {
-      text-align: left;
       //styleName: Base 2;
       font-family: $font-secondary;
       font-size: 18px;
       font-weight: 400;
       line-height: 24px;
-      letter-spacing: 0px;
+      letter-spacing: 0;
       color: #7174ff;
+      text-align: left;
       cursor: pointer;
+
       &:hover {
         text-decoration: underline;
       }
