--- a/src/components/roadmap-page/QuarterPanel/style.scss
+++ b/src/components/roadmap-page/QuarterPanel/style.scss
@@ -1,4 +1,5 @@
-@import '../../../styles/_main';
+@import "../../../styles/_main";
+@import "../../../styles/common/colors";
 
 $offsetTop: 300px;
 $offsetTopMobile: 200px;
@@ -64,8 +65,8 @@ $offsetTopMobile: 200px;
     flex-direction: column;
     text-align: right;
     background-color: #f2f5f9;
-    opacity: .4;
-    transition: opacity .3s ease-in-out;
+    opacity: 0.4;
+    transition: opacity 0.3s ease-in-out;
 
     &--active {
       opacity: 1;
@@ -186,7 +187,7 @@ $offsetTopMobile: 200px;
     padding: 24px;
     background: white;
     border-radius: 4px;
-    opacity: .4;
+    opacity: 0.4;
 
     &--active {
       opacity: 1;
@@ -246,8 +247,8 @@ $offsetTopMobile: 200px;
       border-radius: 2px;
       opacity: 0;
       visibility: hidden;
-      transition: visibility .3s linear, opacity .3s linear;
-      transition-delay: .1s;
+      transition: visibility 0.3s linear, opacity 0.3s linear;
+      transition-delay: 0.1s;
 
       &__title {
         //styleName: h10;
@@ -278,7 +279,7 @@ $offsetTopMobile: 200px;
         font-size: 12px;
         font-weight: 500;
         line-height: 16px;
-        letter-spacing: .25px;
+        letter-spacing: 0.25px;
         color: #a7aeb7;
         text-align: left;
       }
@@ -305,18 +306,18 @@ $offsetTopMobile: 200px;
       width: 40px;
       height: 40px;
       // background-color: #4038ff;
-      background-image: url('../../../assets/images/Qlinkicon.png');
+      background-image: url("../../../assets/images/Qlinkicon.png");
       background-repeat: no-repeat;
       background-size: cover;
       border-radius: 50%;
 
       &:hover {
         background-color: #f2f5f9;
-        background-image: url('../../../assets/images/Qlinkicon_hover.png');
+        background-image: url("../../../assets/images/Qlinkicon_hover.png");
       }
 
       &--active {
-        background-image: url('../../../assets/images/Qlinkicon_active.png');
+        background-image: url("../../../assets/images/Qlinkicon_active.png");
       }
     }
   }
@@ -445,8 +446,7 @@ $offsetTopMobile: 200px;
 .mileston__icon {
   &--active {
     /* filter configuration comes from CSS filter generator - check NOTE below */
-    filter:
-      invert(12%) sepia(63%) saturate(6234%) hue-rotate(222deg)
+    filter: invert(12%) sepia(63%) saturate(6234%) hue-rotate(222deg)
       brightness(87%) contrast(156%);
   }
 }
