--- a/src/components/glossary-page/Glosaary_head/style.scss
+++ b/src/components/glossary-page/Glosaary_head/style.scss
@@ -17,6 +17,10 @@
     color: #5c6475;
     text-align: left;
     cursor: pointer;
+
+    &:hover {
+      color: white;
+    }
   }
 
   &__content {
