--- a/src/components/Banner/style.scss
+++ b/src/components/Banner/style.scss
@@ -44,6 +44,18 @@
     width: 16px;
     height: 16px;
     margin: 8px;
+
+    &__close {
+      width: 30px;
+      height: 30px;
+      padding: 7px;
+      cursor: pointer;
+      border-radius: 50%;
+
+      &:hover {
+        background: #bbdbf63f;
+      }
+    }
   }
 
   &__close {
@@ -65,6 +77,10 @@
     &__icon {
       display: block;
     }
+
+    &__close {
+      height: 7px;
+    }
   }
   @media (max-width: 750px) {
     width: 335px;
@@ -73,6 +89,10 @@
 
     &__head {
       display: flex;
+    }
+
+    &__close {
+      height: 7px;
     }
 
     &__icon {
