--- a/src/components/Tooltip/style.scss
+++ b/src/components/Tooltip/style.scss
@@ -31,4 +31,10 @@
     padding: 20px;
     background-color: #f5f5f5;
   }
+
+  @media (max-width: 988px) {
+    .tooltip {
+      margin: -1px 0;
+    }
+  }
 }
