--- a/src/components/roadmap-page/QuarterPanel/style.scss
+++ b/src/components/roadmap-page/QuarterPanel/style.scss
@@ -1,5 +1,5 @@
-@import "../../../styles/_main";
-@import "../../../styles/common/colors";
+@import '../../../styles/_main';
+@import '../../../styles/common/colors';
 
 $offsetTop: 300px;
 $offsetTopMobile: 200px;
@@ -30,6 +30,7 @@ $offsetTopMobile: 200px;
   }
   @media (max-width: 750px) {
     width: 275px;
+    gap: 1px;
     grid-template-columns: 40px 227px;
 
     &__bottom {
@@ -65,8 +66,8 @@ $offsetTopMobile: 200px;
     flex-direction: column;
     text-align: right;
     background-color: #f2f5f9;
-    opacity: 0.4;
-    transition: opacity 0.3s ease-in-out;
+    opacity: .4;
+    transition: opacity .3s ease-in-out;
 
     &--active {
       opacity: 1;
@@ -133,6 +134,13 @@ $offsetTopMobile: 200px;
       background-color: $c_neutral-200;
       border-radius: 50%;
 
+      &__loading {
+        width: 24px;
+        height: 24px;
+        background: #4038ff;
+        border-radius: 50%;
+      }
+
       &--active {
         position: fixed;
         top: $offsetTop;
@@ -187,7 +195,7 @@ $offsetTopMobile: 200px;
     padding: 24px;
     background: white;
     border-radius: 4px;
-    opacity: 0.4;
+    opacity: .4;
 
     &--active {
       opacity: 1;
@@ -247,8 +255,8 @@ $offsetTopMobile: 200px;
       border-radius: 2px;
       opacity: 0;
       visibility: hidden;
-      transition: visibility 0.3s linear, opacity 0.3s linear;
-      transition-delay: 0.1s;
+      transition: visibility .3s linear, opacity .3s linear;
+      transition-delay: .1s;
 
       &__title {
         //styleName: h10;
@@ -279,7 +287,7 @@ $offsetTopMobile: 200px;
         font-size: 12px;
         font-weight: 500;
         line-height: 16px;
-        letter-spacing: 0.25px;
+        letter-spacing: .25px;
         color: #a7aeb7;
         text-align: left;
       }
@@ -306,18 +314,18 @@ $offsetTopMobile: 200px;
       width: 40px;
       height: 40px;
       // background-color: #4038ff;
-      background-image: url("../../../assets/images/Qlinkicon.png");
+      background-image: url('../../../assets/images/Qlinkicon.png');
       background-repeat: no-repeat;
       background-size: cover;
       border-radius: 50%;
 
       &:hover {
         background-color: #f2f5f9;
-        background-image: url("../../../assets/images/Qlinkicon_hover.png");
+        background-image: url('../../../assets/images/Qlinkicon_hover.png');
       }
 
       &--active {
-        background-image: url("../../../assets/images/Qlinkicon_active.png");
+        background-image: url('../../../assets/images/Qlinkicon_active.png');
       }
     }
   }
@@ -325,8 +333,8 @@ $offsetTopMobile: 200px;
   &__playIcon {
     display: inherit;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 48px;
+    height: 48px;
     background-color: #dee3e9;
     border: solid 1px #a3c3f230;
     border-radius: 50%;
@@ -444,9 +452,11 @@ $offsetTopMobile: 200px;
 }
 
 .mileston__icon {
+  width: 24px;
+  height: 24px;
+
   &--active {
     /* filter configuration comes from CSS filter generator - check NOTE below */
-    filter: invert(12%) sepia(63%) saturate(6234%) hue-rotate(222deg)
-      brightness(87%) contrast(156%);
+    filter: invert(12%) sepia(63%) saturate(6234%) hue-rotate(222deg) brightness(87%) contrast(156%);
   }
 }
