--- a/src/components/Banner/style.scss
+++ b/src/components/Banner/style.scss
@@ -43,7 +43,7 @@
     display: -webkit-inline-box;
     width: 16px;
     height: 16px;
-    margin: 8px;
+    margin: 8px 8px 8px -1px;
 
     &__close {
       width: 30px;
