--- a/src/components/Tooltip/style.scss
+++ b/src/components/Tooltip/style.scss
@@ -9,21 +9,22 @@
     padding: 15px 15px 18px 15px;
     color: #fff;
     background-color: #333;
+    transition: opacity 0.3s ease-in-out;
     opacity: 0;
+    visibility: hidden;
     transform: translateY(-100%);
-    transition: opacity .3s ease-in-out;
-    clip-path:
-      polygon(
-        0% 0%,
-        100% 0%,
-        100% calc(100% - 6px),
-        100% 100%,
-        calc(100% - 8px) calc(100% - 6px),
-        0% calc(100% - 6px)
-      );
+    clip-path: polygon(
+      0% 0%,
+      100% 0%,
+      100% calc(100% - 6px),
+      100% 100%,
+      calc(100% - 8px) calc(100% - 6px),
+      0% calc(100% - 6px)
+    );
 
     &.visible {
       opacity: 1;
+      visibility: inherit;
     }
   }
 
