--- a/src/components/roadmap-page/Quarters/style.scss
+++ b/src/components/roadmap-page/Quarters/style.scss
@@ -18,7 +18,7 @@
     display: initial;
     color: inherit;
     text-align: right;
-    transition: transform .3s;
+    transition: transform 0.3s;
 
     &--active {
       transform: rotate(180deg);
@@ -53,7 +53,7 @@
       justify-content: flex-end;
       color: inherit;
       text-align: right;
-      transition: transform .3s;
+      transition: transform 0.3s;
     }
 
     &__dropdown {
@@ -67,7 +67,7 @@
       &--active {
         z-index: 10;
         display: block;
-        transform: translateY(75%);
+        transform: translateY(69%);
       }
     }
 
@@ -131,7 +131,7 @@
       font-family: $font-secondary;
       font-size: 14px;
       line-height: 20px;
-      letter-spacing: -.4000000059604645px;
+      letter-spacing: -0.4000000059604645px;
       color: #a7aeb7;
       text-align: center;
     }
