--- a/src/components/roadmap-page/GlossaryTeams/style.scss
+++ b/src/components/roadmap-page/GlossaryTeams/style.scss
@@ -62,7 +62,6 @@
       padding: 5px;
       cursor: pointer;
       border-radius: 50%;
-      opacity: 0.4;
 
       &:hover {
         background: #bbdaf6;
@@ -151,9 +150,10 @@
       letter-spacing: 0;
       color: #6c6cff;
       text-align: left;
+      border-bottom: solid 1px #6c6cff00;
+      cursor: pointer;
 
       &:hover {
-        cursor: pointer;
         border-bottom: solid 1px #6c6cff;
       }
     }
