update fix firefox

--- a/src/components/roadmap-page/Quarters/style.scss
+++ b/src/components/roadmap-page/Quarters/style.scss
@@ -251,7 +251,7 @@
       }
 
       &__button {
-        width: -webkit-fill-available;
+        width: 100%;
         margin: 12px 10px;
         padding: 0 30px;
         color: $c_blue-ribbon;
