--- a/src/components/roadmap-page/GlossaryTeams/style.scss
+++ b/src/components/roadmap-page/GlossaryTeams/style.scss
@@ -199,7 +199,7 @@
       }
 
       &__button {
-        width: -webkit-fill-available;
+        width: 100%;
         margin: 12px 10px;
         padding: 0 30px;
         color: $c_blue-ribbon;
