Re-instate accidentally removed files and code, delete unnecessary files, fix lint errors

--- a/src/components/glossary-page/style.scss
+++ b/src/components/glossary-page/style.scss
@@ -1,10 +1,11 @@
 .Glossary {
   display: grid;
-  padding: 80px 0px;
+  padding: 80px 0;
   color: white;
   background: #0b0c0f;
-  justify-items: center;
   gap: 64px;
+  justify-items: center;
+
   &__body {
     max-width: 1464px;
     padding: 0 32px;
@@ -15,8 +16,9 @@
   }
   @media (max-width: 992px) {
     max-width: 1440px;
+
     &__body {
-      padding: 0px;
+      padding: 0;
     }
   }
 }
