--- a/src/pages/roadmap/style.scss
+++ b/src/pages/roadmap/style.scss
@@ -3,18 +3,21 @@
 
 .RoadmapPage {
   background-color: $c_catskill_white;
+
   &__hero-wrapper {
     background-color: black;
   }
 
   &__body {
     display: grid;
-    justify-items: center;
     width: auto;
+    justify-items: center;
+
     &__goal {
       max-width: 816px;
     }
   }
+
   &__hero {
     @extend %container;
 
@@ -77,7 +80,7 @@
     padding: 24px;
     cursor: pointer;
     background-color: $c_white;
-    transition: all 0.3s;
+    transition: all .3s;
 
     &:hover {
       transform: translate(-7.2px, -8px);
