--- a/src/components/Banner/style.scss
+++ b/src/components/Banner/style.scss
@@ -4,16 +4,18 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 24px;
+  width: 100%;
+  max-width: 816px;
   margin: 12px;
+  padding: 24px;
   background-color: #fff;
   gap: 8px;
-  max-width: 816px;
-  width: 100%;
+
   &__head {
     display: grid;
     flex-direction: column;
     grid-template-columns: 36px 650px;
+
     &__icon {
       display: grid;
       flex-direction: column;
@@ -48,7 +50,7 @@
     display: -webkit-inline-box;
     width: 16px;
     height: 16px;
-    margin: 8px 8px 8px 0px;
+    margin: 8px 8px 8px 0;
 
     &__close {
       width: 30px;
@@ -68,8 +70,9 @@
     display: contents;
   }
   @media (max-width: 1020px) {
-    gap: 16px;
     width: auto;
+    gap: 16px;
+
     &__head {
       display: flex;
     }
