--- a/src/components/roadmap-page/QuarterPanel/style.scss
+++ b/src/components/roadmap-page/QuarterPanel/style.scss
@@ -66,8 +66,8 @@ $offsetTopMobile: 200px;
     flex-direction: column;
     text-align: right;
     background-color: #f2f5f9;
-    opacity: 0.4;
-    transition: opacity 0.3s ease-in-out;
+    opacity: .4;
+    transition: opacity .3s ease-in-out;
 
     &--active {
       opacity: 1;
@@ -195,7 +195,7 @@ $offsetTopMobile: 200px;
     padding: 24px;
     background: white;
     border-radius: 4px;
-    opacity: 0.4;
+    opacity: .4;
 
     &--active {
       opacity: 1;
@@ -255,8 +255,8 @@ $offsetTopMobile: 200px;
       border-radius: 2px;
       opacity: 0;
       visibility: hidden;
-      transition: visibility 0.3s linear, opacity 0.3s linear;
-      transition-delay: 0.1s;
+      transition: visibility .3s linear, opacity .3s linear;
+      transition-delay: .1s;
 
       &__title {
         //styleName: h10;
@@ -287,7 +287,7 @@ $offsetTopMobile: 200px;
         font-size: 12px;
         font-weight: 500;
         line-height: 16px;
-        letter-spacing: 0.25px;
+        letter-spacing: .25px;
         color: #a7aeb7;
         text-align: left;
       }
