--- a/src/components/roadmap-page/Quarters/style.scss
+++ b/src/components/roadmap-page/Quarters/style.scss
@@ -71,7 +71,7 @@
       &--active {
         z-index: 10;
         display: block;
-        transform: translateY(69%);
+        transform: translate(-17px, 69%);
       }
     }
 
@@ -236,8 +236,13 @@
       }
 
       &__dropdown {
-        width: auto;
+        width: 100%;
         margin: 0 10px;
+        padding: 0 10px;
+
+        &--active {
+          transform: translate(-37px, 69%);
+        }
       }
     }
 
