Remove unneeded console log, update margins, fix roadmap copy button style, other fixes

--- a/src/components/roadmap-page/Quarters/style.scss
+++ b/src/components/roadmap-page/Quarters/style.scss
@@ -259,7 +259,7 @@
 
       &__button {
         width: 100%;
-        margin: 12px 10px;
+        margin: 12px 0 12px 0;
         padding: 0 30px;
         color: $c_blue-ribbon;
         border: 2px solid $c_blue-ribbon;
