Remove unnecessary roadmap versions

--- a/src/components/roadmap-page/Quarters/style.scss
+++ b/src/components/roadmap-page/Quarters/style.scss
@@ -71,7 +71,7 @@
       &--active {
         z-index: 10;
         display: block;
-        transform: translate(-17px, 69%);
+        transform: translate(-18px, 60px);
       }
     }
 
@@ -241,7 +241,7 @@
         padding: 0 10px;
 
         &--active {
-          transform: translate(-37px, 69%);
+          transform: translate(-38px, 60px);
         }
       }
     }
