--- a/src/components/index-page/Hero/style.scss
+++ b/src/components/index-page/Hero/style.scss
@@ -27,7 +27,8 @@ $animation-name: null;
 
   &__hero-animation-wrapper {
     position: relative;
-    padding: 32px;
+    min-height: 1376px;
+    padding: 72px 0;
     overflow: hidden;
     border-radius: 32px;
   }
@@ -55,22 +56,22 @@ $animation-name: null;
   }
 
   &__hero {
-    @extend %largeContainer;
-
     position: relative;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+    display: grid;
+    justify-content: center;
+    // Znaci, ide od 1 do 13..
+    column-gap: 32px;
+    grid-template-columns: repeat(12, 1fr);
 
     &__title {
-      @include h1;
+      @include h1100;
 
-      max-width: 818px;
       color: $c_white;
       text-align: center;
       opacity: 0;
       animation: animateLandingContent .75s forwards ease;
       animation-delay: .1s;
+      grid-column: 2 / 12;
 
       span > div {
         display: -webkit-inline-box;
@@ -78,7 +79,7 @@ $animation-name: null;
     }
 
     &__typewriter-title {
-      @include h1;
+      @include h1100;
 
       margin-left: 12px;
       color: #6c6cff;
@@ -91,88 +92,73 @@ $animation-name: null;
     }
 
     &__subtitle {
-      @include base-1;
+      @include t400;
 
-      margin-top: 24px;
+      margin-top: 16px;
       color: #a7aeb7;
-      text-align: center;
       opacity: 0;
       animation: animateLandingContent .75s forwards ease;
       animation-delay: .1s;
+      grid-column: 4 / 10;
     }
 
     &__buttons {
       display: flex;
+      justify-content: center;
       margin-top: 48px;
       opacity: 0;
       animation: animateLandingContent .75s forwards ease;
       animation-delay: .1s;
       gap: 16px;
+      grid-column: 5 / 9;
     }
 
     &__button {
-      width: 157px;
-      height: 60px;
-      padding: 18px 15px !important;
-    }
-
-    &__community-button {
-      width: 214px;
-      height: 60px;
-      padding: 18px 16px;
-      background-color: $c_black;
-      border: 2px solid #5c6475;
+      width: 304px;
+      height: 64px;
+      padding: 20px 32px !important;
+      border-radius: 8px;
 
       &:hover {
-        background-color: $c_black;
+        background-color: #261ee4;
       }
     }
 
     &__button-text {
-      @include landing-page-button-text;
+      @include t300;
     }
 
     &__illustration {
       position: relative;
-      margin-top: 80px;
+      margin-top: 72px;
+      grid-column: 2 / 12;
 
       &__background {
-        max-width: 1152px;
-        opacity: 0;
         // TODO: Using drop-shadow results in graphical problems in firefox and that is why it is commented out.
         // This functionality should be reinstated as soon as that is fixed on their end.
         // filter: drop-shadow(0 33px 100px rgba(0, 0, 0, .22)) drop-shadow(0 7.37098px 22.3363px rgba(0, 0, 0, .131144)) drop-shadow(0 2.19453px 6.6501px rgba(0, 0, 0, .0888564));
+        width: 100%;
+        // max-width: 1060px;
+        opacity: 0;
         animation: animateLandingHeroImage .75s forwards ease;
         animation-delay: .3s;
       }
 
       &__foreground {
         position: absolute;
-        top: 90px;
-        right: -45px;
-        max-width: 404px;
+        width: 100%;
         opacity: 0;
         animation: animateLandingNftWidget .75s forwards ease;
         animation-delay: .3s;
       }
 
-      &__button {
+      &__holders {
         position: absolute;
-        top: 400px;
-        right: -21px;
-        max-width: 356px;
+        width: 100%;
         opacity: 0;
-        animation: animateLandingButton 1s .75s forwards ease;
+        animation: animateLandingNftWidget .75s forwards ease;
         animation-delay: .3s;
       }
-    }
-
-    &__overlay {
-      position: absolute;
-      bottom: -100px;
-      width: 100%;
-      height: 400px;
-      background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000 100%);
     }
   }
 
@@ -193,16 +179,6 @@ $animation-name: null;
           right: -15px;
           width: 300px;
         }
-
-        &__button {
-          top: 455px;
-          right: 0;
-          width: 270px;
-        }
-      }
-
-      &__overlay {
-        height: 360px;
       }
     }
   }
@@ -241,23 +217,11 @@ $animation-name: null;
           width: 220px;
         }
 
-        &__button {
-          top: -210px;
-          right: 10px;
-          width: 200px;
-        }
-
         &__background,
-        &__foreground,
-        &__button {
+        &__foreground {
           opacity: 1;
           animation: none;
         }
-      }
-
-      &__overlay {
-        bottom: -20px;
-        height: 200px;
       }
     }
   }
@@ -306,16 +270,6 @@ $animation-name: null;
           right: -8px;
           width: 165px;
         }
-
-        &__button {
-          top: -155px;
-          right: -1px;
-          width: 150px;
-        }
-      }
-
-      &__overlay {
-        height: 150px;
       }
     }
   }
@@ -353,21 +307,6 @@ $animation-name: null;
           bottom: -11px;
           width: 33%;
         }
-
-        &__button {
-          top: 51%;
-          right: -4px;
-          width: calc(33% - 12px);
-        }
-
-        &__button-plx {
-          // override will-change: transform applied by Plx to not create a new stacking context
-          will-change: width !important;
-        }
-      }
-
-      &__overlay {
-        height: 105px;
       }
     }
   }
